--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -43,26 +43,20 @@
   --radius-xl: calc(var(--radius) + 4px);
 }
 
-
-
 :root {
   --white-color: #ffffff;
   --black-color: #000;
   --text-color: #707070;
-  --theme-color: #B48450; 
-  --theme-hover-color: #9a6f3c; 
+  --theme-color: #b48450;
+  --theme-hover-color: #9a6f3c;
   --balancebar-bg-color: #282828;
-  --border-one: #8f8f8f; 
-  --border-two:  #C4CAD0;
+  --border-one: #8f8f8f;
+  --border-two: #c4cad0;
   --border-three: #707070;
-  --theme-green: #00FF11;
-  --theme-gray: #3A3A3A;
+  --theme-green: #00ff11;
+  --theme-gray: #3a3a3a;
   /* --theme-red: #FF2020; */
-  --theme-red: #FB4B4B;
-    
-
-
-
+  --theme-red: #fb4b4b;
 
   /* -------------------------- */
 
@@ -144,26 +138,31 @@
   }
 }
 
+.welcome-text {
+  font-weight: 400;
+  background: linear-gradient(
+    0deg,
+    #fff0da -10.3%,
+    #94641e -7.16%,
+    #fff2db 71.82%,
+    #eac885 82.8%,
+    #fbf5d1 86.98%,
+    #bd9a4b 89.07%,
+    #ecd8a3 89.08%
+  );
+  -webkit-background-clip: text;
+  background-clip: text;
+  color: transparent;
+  text-shadow: 0 1px 1px rgba(183, 138, 81, 0.3),
+    0 2px 3px rgba(183, 138, 81, 0.2), 0 4px 6px rgba(183, 138, 81, 0.1);
+  position: relative;
+  letter-spacing: 0.71px;
+  line-height: 100%;
+  text-align: center;
+  color: #b78a51;
+}
 
- .welcome-text {
-
-            font-weight: 400;
-            background: linear-gradient(0deg, #FFF0DA -10.3%, #94641E -7.16%, #FFF2DB 71.82%, #EAC885 82.8%, #FBF5D1 86.98%, #BD9A4B 89.07%, #ECD8A3 89.08%);
-            -webkit-background-clip: text;
-            background-clip: text;
-            color: transparent;
-            text-shadow: 
-                0 1px 1px rgba(183, 138, 81, 0.3),
-                0 2px 3px rgba(183, 138, 81, 0.2),
-                0 4px 6px rgba(183, 138, 81, 0.1);
-            position: relative;
-            letter-spacing: 0.71px;
-            line-height: 100%;
-            text-align: center;
-             color: #B78A51;
-          }
-        
-        /* .welcome-text::after {
+/* .welcome-text::after {
             content: '';
             position: absolute;
             left: 0;
